Wed Jan 18 13:13:07 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/matchspy.h,include/xapian/postingsource.h,
	  include/xapian/weight.h: Document that you can define a static
	  operator delete method in your subclass if deallocation needs to be
	  handled specially.  (Closes ticket#554)

Wed Jan 18 12:27:20 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/geospatial.h: Mark as experimental for now.

Wed Jan 18 12:22:39 GMT 2012  Olly Betts <olly@survex.com>

	* docs/geospatial.rst: Say "haversine" rather than "Haversine"
	  consistently.

Wed Jan 18 12:01:28 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/geospatial.h: Change empty() to return bool not
	  size_t.

Wed Jan 18 10:44:16 GMT 2012  Olly Betts <olly@survex.com>

	* docs/geospatial.rst: Fix minor typos in geospatial docs.

Wed Jan 18 10:39:53 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,api/postingsource.cc,api/queryinternal.cc,
	  api/registry.cc,common/output.h,common/registryinternal.h,
	  docs/geospatial.rst,geospatial/,include/Makefile.mk,include/xapian.h,
	  include/xapian/geospatial.h,include/xapian/postingsource.h,
	  include/xapian/registry.h,tests/.gitignore,tests/Makefile.am,
	  tests/api_geospatial.cc: Merge geotomerge2 branch from github.
	  Closes ticket#481.

Tue Jan 17 22:29:10 GMT 2012  Olly Betts <olly@survex.com>

	* api/errorhandler.cc: Reorder header includes.

Mon Jan 16 22:59:02 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/queryparser.h,queryparser/queryparser.lemony: Fix
	  FLAG_AUTO_SYNONYMS not to enable auto multi-word synonyms too.
	* tests/queryparsertest.cc: Extend testcase qp_synonym1 to include a
	  regression test for this bug.

Sun Jan 15 12:41:35 GMT 2012  Olly Betts <olly@survex.com>

	* .gitignore,backends/Makefile.mk,backends/brass/,backends/chert/,
	  backends/dbcheck.cc,bin/,common/bitstream.h,
	  include/xapian/database.h: Add a (currently experimental) API for